Added error handling scenarios